--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ desc-c{
   margin-bottom: -30px;
 }
 body {
-  background: url('https://gitee.com/chwt163/Navigationbg/raw/master/img/bg.jpg');
+  background: url('https://raw.githubusercontent.com/chwt163/navigation/main/img/bg.jpg');
   height: 100%;
   background-attachment:fixed;
   background-position: center;
@@ -205,7 +205,7 @@ body {
 }
 @media (max-width: 768px) {
 body {
-  background: url('https://gitee.com/chwt163/Navigationbg/raw/master/img/bg-s.jpg');
+  background: url('https://raw.githubusercontent.com/chwt163/navigation/main/img/bg-s.jpg');
   height: 100%;
   background-attachment:fixed;
   background-position: center;
