--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ desc-h{
   }
 @media screen and (orientation: landscape) {
 body {
-  background: url('https://gitee.com/chwt163/Navigationbg/raw/master/img/bg-h.jpg');
+  background: url('https://raw.githubusercontent.com/chwt163/navigation/main/img/bg-h.jpg');
   height: 100%;
   background-attachment:fixed;
   background-position: center;
