--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>首页</title>
 <meta charset="utf-8" />
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+<meta http-equiv="Cache-Control" content="max-age=315360000" />
+<meta http-equiv="Expires" content="Mon, 20 Jul 2099 23:00:00 GMT" />
 <style type="text/css">
 * {
   margin: 0;
